[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[project]
authors = [
    {name="tiksan"},
    {name="SR_"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Celery",
    "Framework :: Flask",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: JavaScript",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Games/Entertainment",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
    # celery pinned by tornium-celery
    "celery ~= 5.3.5",
    "flask ~= 3.0.0",
    "flask-cors ~= 4.0.0",
    "flask-login ~= 0.6.2",
    "msgpack ~= 1.0.0",
    # mongoengine pinned by tornium-commons
    "mongoengine ~= 0.26.0",
    "scikit-learn",
    "pandas",
    "pynacl ~= 1.5.0",
    # redis pinned by tornium-commons
    "redis ~= 5.0.0",
    # requests pinned by tornium-celery
    "requests ~= 2.31.0",
    "xgboost",
    "tornium_commons @ git+https://github.com/Tornium/tornium-commons@master#egg=tornium-commons",
    "tornium_celery @ git+https://github.com/Tornium/tornium-celery@master#egg=tornium-celery"
]
description = "A website and Discord bot to assist with the playing of Torn City developed with love <3"
keywords = ["torn", "torn-city", "torn-city-api", "flask", "discord", "celery"]
name = "Tornium-Pro"
version = "0.3.1"

[project.optional-dependencies]
dev = [
    "bandit",
    "black",
    "flake8",
    "isort",
    "pre-commit",
    "tox"
]
test = [
    "pytest",
    "pytest-sugar"
]
ci = [
    "bandit",
    "black",
    "flake8",
    "isort",
    "mongomock",
    "pytest",
    "pytest-sugar",
    "tox",
    "tox-gh-actions"
]
extra = [
    "orjson",
    "pytoml"
]
docs = [
    "Sphinx >= 5,<6",
    "sphinx_rtd_theme"
]

[project.urls]
homepage = "https://tornium.com"
repository = "https://github.com/dssecret/tornium-pro"
changelog = "https://github.com/dssecret/tornium-pro/blob/master/CHANGELOG.adoc"

[tool.bandit]
exclude = ["./tests", "./.tox", ".git", "__pycache__", "./venv", "./docs"]
skips = ["B201", "B311", "B112"]

[tool.black]
line-length = 120
extend-exclude = "./docs"

[tool.isort]
profile = "black"
