[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    {name="tiksan"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Celery",
    "Framework :: Flask",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: JavaScript",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Games/Entertainment",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
    "celery ~= 5.2.7",
    "pynacl ~= 1.5.0",
    "redis ~= 5.0.0",
    "requests ~= 2.31.0",
    "tornium_commons @ git+https://github.com/Tornium/tornium-commons@master#egg=tornium-commons",
]
description = "A website and Discord bot to assist with the playing of Torn City developed with love <3"
keywords = ["torn", "torn-city", "torn-city-api", "flask", "discord", "celery"]
name = "tornium_celery"
version = "0.3.1"

[project.optional-dependencies]
dev = [
    "bandit",
    "black",
    "flake8",
    "isort",
    "tox"
]
test = [
    "pytest",
    "pytest-sugar"
]
ci = [
    "bandit",
    "black",
    "flake8",
    "isort",
    "pytest",
    "pytest-sugar",
    "tox",
    "tox-gh-actions"
]
extra = [
    "orjson",
    "pytoml"
]

[project.urls]
homepage = "https://tornium.com"
repository = "https://github.com/Tornium/tornium-celery"
changelog = "https://github.com/Tornium/tornium-celery/blob/master/CHANGELOG.adoc"

[tool.bandit]
exclude = ["./tests", "./.tox", ".git", "__pycache__", "./venv"]
skips = ["B201", "B311", "B112"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
