[project]
authors = [
    {name="tiksan"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Celery",
    "Framework :: Flask",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: JavaScript",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Games/Entertainment",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
    "authlib",
    "flask ~= 3.1.0",
    "flask-cors ~= 5.0.0",
    "flask-login ~= 0.6.2",
    "msgpack ~= 1.0.0",
    "scikit-learn",
    "toml",
    "pandas",
    "peewee ~= 3.17.0",
    "psycopg2",
    "pynacl ~= 1.5.0",
    "xgboost",
]
description = "A website and Discord bot to assist with the playing of Torn City developed with love <3"
keywords = ["torn", "torn-city", "torn-city-api", "flask", "discord", "celery"]
name = "tornium-core"
version = "0.4.0"

[project.optional-dependencies]
dev = [
    "bandit",
    "black",
    "flake8",
    "isort",
    "pre-commit",
]
test = [
    "pytest",
    "pytest-sugar"
]
ci = [
    "bandit",
    "black",
    "flake8",
    "isort",
    "pytest",
    "pytest-sugar",
]
extra = [
    "orjson",
    "pytoml"
]
docs = [
    "Sphinx >=5,<9",
    "sphinx_rtd_theme"
]

[project.urls]
homepage = "https://tornium.com"
repository = "https://github.com/tornium/tornium-core"
changelog = "https://github.com/tornium/tornium-core/blob/master/CHANGELOG.adoc"

[tool.bandit]
exclude = ["./tests", ".git", "__pycache__", "./venv", "./docs"]
skips = ["B201", "B311", "B112", "B311"]

[tool.black]
line-length = 120
extend-exclude = "./docs"

[tool.isort]
profile = "black"
