[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    {name = "tiksan"}
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Games/Entertainment",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers"
]
dependencies = [
    "boltons",
    "pydantic",
    "peewee",
    "redis ~= 5.0.0"
]
description = "Reusable components for Tornium"
keywords = ["tornium"]
license = {file = "LICENSE"}
name = "tornium_commons"
version = "0.3.1"
requires-python = ">=3.7"

[project.optional-dependencies]
dev = [
    "bandit",
    "black",
    "flake8",
    "isort",
    "pre-commit",
    "tox"
]
test = [
    "pytest",
    "pytest-sugar",
    "hypothesis"
]

[project.urls]
homepage = "https://tornium.com"
repository = "https://github.com/Tornium/tornium-commons"
changelog = "https://github.com/Tornium/tornium-commons/blob/master/CHANGELOG.adoc"

[tool.black]
line-length = 120

[tool.bandit]
exclude_dirs = ["./.git", "__pycache__", "./venv"]

[tool.isort]
profile = "black"